      ForeignKey will also assume the "default" schema
      when locating remote table.  This allows the "schema"
      argument on MetaData to be applied to any 
      set of Table objects that otherwise don't have 
      a "schema".
    - a "has_schema" method has been implemented
      on dialect, but only works on Postgresql so far.
    Courtesy Manlio Perillo, [ticket:1679]

- postgresql
   - [bug] Postgresql dialect memoizes that an ENUM of a 
     particular name was processed
     during a create/drop sequence.  This allows
     a create/drop sequence to work without any
     calls to "checkfirst", and also means with
     "checkfirst" turned on it only needs to 
     check for the ENUM once.  [ticket:2311]

- mysql
  - [bug] Unicode adjustments allow latest pymysql 
    (post 0.4) to pass 100% on Python 2.

- examples
   - [bug] Fixed bug in history_meta.py example where
     the "unique" flag was not removed from a 
     single-table-inheritance subclass which 
     generates columns to put up onto the base.

0.7.3
=====
- general
   - Adjusted the "importlater" mechanism, which is
     used internally to resolve import cycles,
     such that the usage of __import__ is completed
     when the import of sqlalchemy or sqlalchemy.orm
     is done, thereby avoiding any usage of __import__
     after the application starts new threads,
     fixes [ticket:2279].  Also in 0.6.9.

- orm
   - Improved query.join() such that the "left" side
     can more flexibly be a non-ORM selectable, 
     such as a subquery.   A selectable placed
     in select_from() will now be used as the left
     side, favored over implicit usage
     of a mapped entity.
     If the join still fails based on lack of
     foreign keys, the error message includes 
     this detail.  Thanks to brianrhude
     on IRC for the test case.  [ticket:2298]

   - Added after_soft_rollback() Session event.  This
     event fires unconditionally whenever rollback()